# gofish

./: .env.example  README.md  fish.py  main.py  pyproject.toml
